--- a/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
@@ -64,9 +64,9 @@ module.exports = {
    * 命令：ee-bin build
    * 说明：用来构建前端、go、或者自定义命令
    * 举例1：ee-bin build --cmds=frontend (构建 前端 dist资源)
-   * 举例2：ee-bin build --cmds=go_build_w (构建 go windows平台程序)
-   * 举例3：ee-bin build --cmds=go_build_m (构建 go macos平台程序)
-   * 举例4：ee-bin build --cmds=go_build_l (构建 go linux平台程序)
+   * 举例2：ee-bin build --cmds=go_w (构建 go windows平台程序)
+   * 举例3：ee-bin build --cmds=go_m (构建 go macos平台程序)
+   * 举例4：ee-bin build --cmds=go_l (构建 go linux平台程序)
    */
   build: {
     // 前端
@@ -76,17 +76,17 @@ module.exports = {
       args: ['run', 'build'],
     },
     //（可选）go
-    go_build_w: {
+    go_w: {
       directory: './go',
       cmd: 'go',
       args: ['build', '-o=../build/extraResources/goapp.exe'],
     },
-    go_build_m: {
+    go_m: {
       directory: './go',
       cmd: 'go',
       args: ['build', '-o=../build/extraResources/goapp'],
     },
-    go_build_l: {
+    go_l: {
       directory: './go',
       cmd: 'go',
       args: ['build', '-o=../build/extraResources/goapp'],
