--- a/docs/01.v3/045.跨语言支持/020.go/04.构建.md
+++ b/docs/01.v3/045.跨语言支持/020.go/04.构建.md
@@ -43,11 +43,11 @@ permalink: /pages/589f74/
 ```javascript
   "scripts": {
     // 构建 windows 平台程序
-    "build-go-w": "ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_build_w",
+    "build-go-w": "ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_w",
     // 构建 macOS 平台程序
-    "build-go-m": "ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_build_m",
+    "build-go-m": "ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_m",
     // 构建 linux 平台程序
-    "build-go-l": "ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_build_l",
+    "build-go-l": "ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_l",
   }
 ```
 
@@ -58,11 +58,13 @@ npm run build-go-w
 
 该命令执行 配置中的:
 ```
-"ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_build_w"
+"ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_w"
 ```
 它包含两个命令：
 - `ee-bin move` 把 `public/`中的资源，移动到 `./go/public/`，它会被嵌入go的可执行程序中。
 - `ee-bin build` 用来生产go的可执行程序。
+
+ee-bin配置与说明：[**查看**](/pages/c492f8/)
 
 3. 程序位置 `./build/extraResources/goapp`
 
