--- a/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
@@ -49,6 +49,7 @@ module.exports = {
     electron: {
       directory: './',
       cmd: 'electron',
+      // --env: local|prod; '--color=always' 控制台颜色
       args: ['.', '--env=local'],
       // ee-bin@v1.4.0 如果前端启动时间过长，可先加载一个loading页
       loadingPage: '/public/html/loading.html', 
