--- a/docs/04.其它/020.案例.md
+++ b/docs/04.其它/020.案例.md
@@ -11,6 +11,11 @@ article: false
 
 桌面软件已进入 to B 时代，使用框架的大部分客户都是企业、政务内部使用，不方便提供图片展示；如果你想展示项目，请联系我（qq：530353222）
 
+### 远控
+![rq-1.png](https://wallace5303.gitee.io/ee/images/ee-v3/rq/rq-1.png)
+![rq-2.png](https://wallace5303.gitee.io/ee/images/ee-v3/rq/rq-2.png)
+![rq-3.png](https://wallace5303.gitee.io/ee/images/ee-v3/rq/rq-3.png)
+
 ###  Alex-Wallpaper
 ![aw-3.jpg](https://img01.kaka996.com/ee/aw-3.png)
 ![aw-2.png](https://img01.kaka996.com/ee/aw-2.png)
@@ -20,8 +25,8 @@ article: false
 ![QQ截图20221128194313.png](/img/electron-egg/showcase/p2.png)
 
 ###  Northstar 盈富量化交易软件 - [官网](https://www.quantit.tech/)
-![d8b3c88f70d2142ff981b54584fa9da.png](/img/electron-egg/showcase/p3.png)
-![2690e140e20fa39cc76a2e070c4f107.png](/img/electron-egg/showcase/p4.png)
+![d8b3c88f7.png](/img/electron-egg/showcase/p3.png)
+![2690e140e.png](/img/electron-egg/showcase/p4.png)
 
 ###  软通桥
 ![A03E74804CE391D45087A9A447FBF3B2.png](/img/electron-egg/showcase/p5.png)
