--- a/docs/04.其它/020.案例精选01.md
+++ b/docs/04.其它/020.案例精选01.md
@@ -9,29 +9,38 @@ article: false
 
 桌面软件已进入 to B 时代，使用框架的大部分客户都是企业、政务内部使用，不方便提供图片展示；如果你想展示项目，请联系我（qq：530353222）
 
-### 远控
+<!-- ### 低代码 - [官网](http://suo.im/9WhEJ)
+
+- [查看官网](http://suo.im/9WhEJ)
+![](https://wallace5303.gitee.io/ee/images/ee-v3/yinmai/ym-p1.png)
+![](https://wallace5303.gitee.io/ee/images/ee-v3/yinmai/ym-p4.png) -->
+
+### 远控 - 商业应用
 
 ![rq-1.png](https://wallace5303.gitee.io/ee/images/ee-v3/rq/rq-1.png)
 ![rq-2.png](https://wallace5303.gitee.io/ee/images/ee-v3/rq/rq-2.png)
 ![rq-3.png](https://wallace5303.gitee.io/ee/images/ee-v3/rq/rq-3.png)
 
-### 云盘
+###  Northstar 盈富量化交易软件  - 开源应用 - [官网](https://www.quantit.tech/)
+
+![d8b3c88f7.png](/img/electron-egg/showcase/p3.png)
+![2690e140e.png](/img/electron-egg/showcase/p4.png)
+
+### 云盘 - 商业应用
 
 ![](https://wallace5303.gitee.io/ee/images/ee-v3/fm/fm-p2.png)
 ![](https://wallace5303.gitee.io/ee/images/ee-v3/fm/fm-p1.png)
 ![](https://wallace5303.gitee.io/ee/images/ee-v3/fm/fm-p4.png)
 
-### IM
+### IM - 商业应用
 
 ![](https://wallace5303.gitee.io/ee/images/ee-v3/im1/im-p1.png)
 ![](https://wallace5303.gitee.io/ee/images/ee-v3/im1/im-p5.png)
 ![](https://wallace5303.gitee.io/ee/images/ee-v3/im2/im-p1.png)
 
-###  Alex-Wallpaper
+###  Alex-Wallpaper - 个人应用
+
 ![aw-3.jpg](https://img01.kaka996.com/ee/aw-3.png)
 ![aw-2.png](https://img01.kaka996.com/ee/aw-2.png)
 
-###  时音音乐
-![QQ图片20221128194242.jpg](/img/electron-egg/showcase/p1.png)
-![QQ截图20221128194313.png](/img/electron-egg/showcase/p2.png)
 
