--- a/docs/04.其它/030.案例java.md
+++ b/docs/04.其它/030.案例java.md
@@ -10,8 +10,26 @@ permalink: /pages/f8293d/
 
 以下案例是社区用户的 `商业`或`开源`项目。
 
+### Zyplayer-doc 私有化部署的知识库 - 开源/商业 - [官网](http://t.nxw.so/9iE0G)
+
+[开源项目地址](http://t.nxw.so/9iE0G)
+
+![](https://wallace5303.gitee.io/ee/images/ee-v3/zydoc/zy-p3.png)
+![](https://wallace5303.gitee.io/ee/images/ee-v3/zydoc/zy-p2.png)
+![](https://wallace5303.gitee.io/ee/images/ee-v3/zydoc/zy-p1.png)
+
+###  TestHub 流程编排 - [官网](http://nsrule.com/?from=electron-egg)
+
+[Gitee地址](https://gitee.com/dromara/TestHub/?from=electron-egg) | [Github地址](https://github.com/dromara/TestHub/?from=electron-egg)
+
+[演示环境](http://testhub.nsrule.com:11018/#/) | 账户：admin | 密码 123456
+
+![](https://wallace5303.gitee.io/ee/images/ee-v3/testhub/testhub-p1.png)
+![](https://wallace5303.gitee.io/ee/images/ee-v3/testhub/testhub-p2.png)
+
 ###  Northstar 盈富量化交易软件 - [官网](https://www.quantit.tech/?from=electron-egg)
-[开源项目地址](https://www.quantit.tech/?from=electron-egg)
+
+[Gitee地址](https://gitee.com/dromara/northstar/?from=electron-egg)
 
 ![d8b3c88f70d2142ff981b54584fa9da.png](/img/electron-egg/showcase/p4.png)
 ![2690e140e20fa39cc76a2e070c4f107.png](/img/electron-egg/showcase/p3.png)
