--- a/docs/04.其它/030.案例java.md
+++ b/docs/04.其它/030.案例java.md
@@ -10,9 +10,9 @@ permalink: /pages/f8293d/
 
 以下案例是社区用户的 `商业`或`开源`项目。
 
-### Zyplayer-doc 私有化部署的知识库 - 开源/商业 - [官网](http://t.nxw.so/9iE0G)
+### Zyplayer-doc 私有化部署的知识库 - 开源/商业 - [官网](http://doc.zyplayer.com/#/integrate/zyplayer-doc?utm=electron-egg)
 
-[开源项目地址](http://t.nxw.so/9iE0G)
+[Gitee地址](http://doc.zyplayer.com/#/integrate/zyplayer-doc?utm=electron-egg)
 
 ![](https://wallace5303.gitee.io/ee/images/ee-v3/zydoc/zy-p3.png)
 ![](https://wallace5303.gitee.io/ee/images/ee-v3/zydoc/zy-p2.png)
