--- a/docs/04.其它/020.案例精选01.md
+++ b/docs/04.其它/020.案例精选01.md
@@ -12,26 +12,26 @@ article: false
 ### 低代码 - [官网](https://www.jnpfsoft.com/index.html?from=electron-egg)
 
 - [查看官网](https://www.jnpfsoft.com/index.html?from=electron-egg)
-![](https://wallace5303.gitee.io/ee/images/ee-v3/yinmai/ym-p1.png)
-![](https://wallace5303.gitee.io/ee/images/ee-v3/yinmai/ym-p4.png)
+![](https://img01.kaka996.com/ee/images/ee-v3/yinmai/ym-p1.png)
+![](https://img01.kaka996.com/ee/images/ee-v3/yinmai/ym-p4.png)
 
 ### 远控 - 商业应用
 
-![rq-1.png](https://wallace5303.gitee.io/ee/images/ee-v3/rq/rq-1.png)
-![rq-2.png](https://wallace5303.gitee.io/ee/images/ee-v3/rq/rq-2.png)
-![rq-3.png](https://wallace5303.gitee.io/ee/images/ee-v3/rq/rq-3.png)
+![rq-1.png](https://img01.kaka996.com/ee/images/ee-v3/rq/rq-1.png)
+![rq-2.png](https://img01.kaka996.com/ee/images/ee-v3/rq/rq-2.png)
+![rq-3.png](https://img01.kaka996.com/ee/images/ee-v3/rq/rq-3.png)
 
 ### 云盘 - 商业应用
 
-![](https://wallace5303.gitee.io/ee/images/ee-v3/fm/fm-p2.png)
-![](https://wallace5303.gitee.io/ee/images/ee-v3/fm/fm-p1.png)
-![](https://wallace5303.gitee.io/ee/images/ee-v3/fm/fm-p4.png)
+![](https://img01.kaka996.com/ee/images/ee-v3/fm/fm-p2.png)
+![](https://img01.kaka996.com/ee/images/ee-v3/fm/fm-p1.png)
+![](https://img01.kaka996.com/ee/images/ee-v3/fm/fm-p4.png)
 
 ### IM - 商业应用
 
-![](https://wallace5303.gitee.io/ee/images/ee-v3/im1/im-p1.png)
-![](https://wallace5303.gitee.io/ee/images/ee-v3/im1/im-p5.png)
-![](https://wallace5303.gitee.io/ee/images/ee-v3/im2/im-p1.png)
+![](https://img01.kaka996.com/ee/images/ee-v3/im1/im-p1.png)
+![](https://img01.kaka996.com/ee/images/ee-v3/im1/im-p5.png)
+![](https://img01.kaka996.com/ee/images/ee-v3/im2/im-p1.png)
 
 ###  Alex-Wallpaper - 个人应用
 
