--- a/docs/06.支持/018.个人赞助.md
+++ b/docs/06.支持/018.个人赞助.md
@@ -37,6 +37,12 @@ article: false
 ##  赞助者列表
 | 日期         | 渠道    | 金额    | 昵称         | 备注             |
 |------------|-------|-------|------------|----------------|
+| 2024-05-05 |  微信 | 10.80     | JXY |    五一假期快乐！   |
+| 2024-05-04 |  微信 | 188    | Zdz |    感谢大佬开源项目！    |
+| 2024-03-25 |  微信 | 10    | 帅le |    感谢您的开源项目！    |
+| 2024-01-25 |  微信 | 10    | King23 |    恭喜发财！    |
+| 2023-01-21 |  微信 | 20    | 文其 |    感谢您的开源项目！    |
+| 2023-09-09 |  微信 | 200    | 欧先生 |    感谢您的开源项目！    |
 | 2023-11-14 |  微信 | 30    | 不如干饭 |    感谢您的开源项目！    |
 | 2023-10-05 |  微信 | 30    | 小肥羊 |    感谢您的开源项目！    |
 | 2023-09-05 |  微信 | 10    | deigo |    感谢您的开源项目！    |
