自动升级时，没有生成 latest.yml

--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -527,3 +527,29 @@ const {app: electronApp} = require("electron");
   }
 ```
 
+### 22：自动升级时，没有生成 latest.yml
+
+解决方案：
+
+在 `./config/builder.js` 中，添加如下
+```javascript
+    "nsis": {
+      "oneClick": false,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "installerIcon": "./build/icons/icon.ico",
+      "uninstallerIcon": "./build/icons/icon.ico",
+      "installerHeaderIcon": "./build/icons/icon.ico",
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "EE框架"
+    },
+    // 添加这部分代码
+    "publish": [
+      {
+        "provider": "generic",
+        "url": "https://github.com/wallace5303/electron-egg"
+      }
+    ],
+```
+
