--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -548,7 +548,7 @@ const {app: electronApp} = require("electron");
     "publish": [
       {
         "provider": "generic",
-        "url": "https://github.com/wallace5303/electron-egg"
+        "url": ""
       }
     ],
 ```
