--- a/docs/04.其它/040.案例go.md
+++ b/docs/04.其它/040.案例go.md
@@ -10,14 +10,16 @@ permalink: /pages/c00a0c/
 
 以下案例是社区用户的 `商业`或`开源`项目。
 
-###  mayfly-go  - [官网](https://github.com/dromara/mayfly-go)
+###  mayfly-go - 商业应用
+
+[官网](https://github.com/dromara/mayfly-go) ｜
+[开源项目地址](https://github.com/dromara/mayfly-go) ｜
+[客户端地址](https://github.com/wallace5303/mayfly-desktop)
+
+
 linux(终端[终端回放] 文件 脚本 进程 计划任务)、数据库（mysql postgres oracle 达梦 高斯 sqlite）、redis(单机 哨兵 集群)、mongo 统一管理操作平台
 
 登录账号：`admin` 密码：`admin123.`
-
-[开源项目地址](https://github.com/dromara/mayfly-go)
-
-[客户端地址](https://github.com/wallace5303/mayfly-desktop)
 
 ![d8b3c88fd.png](/img/electron-egg/showcase/mayfly-p1.png)
 ![26d9cc76a2e070c4f107.png](/img/electron-egg/showcase/mayfly-p2.png)
