--- a/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
@@ -6,6 +6,9 @@ article: false
 ---
 
 ### 基础 config 文件
+
+支持 json、json5、js、cjs、ts配置文件。
+
 ```bash
 # 位置
 ./electron/config/
@@ -103,7 +106,8 @@ config.socketServer = {
   transports: ["polling", "websocket"], // http轮询和websocket
   cors: {
     origin: true, // http协议时，要设置允许跨域
-  }
+  },
+  channel: 'c1'   // 自定义通道名称，默认c1
 };
 ```
 ###  内置http服务
@@ -143,6 +147,7 @@ config.mainServer = {
   indexPath: '/public/dist/index.html',
   host: 'localhost',
   port: 7072, // 默认端口（如果端口被使用，则随机获取一个）
+  open: false, // 是否开放0.0.0.0，默认关闭
 	ssl: {
     key: '/public/ssl/localhost+1.key', // key文件
     cert: '/public/ssl/localhost+1.pem' // cert文件
