--- a/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
@@ -43,16 +43,16 @@ module.exports = {
       port: 8080,              // port
       indexPath: 'index.html'  // 'file://'协议时有效，入口文件
       force: false,            // 强制加载前端服务
+      sync: false,            // (非常住进程才能使用) 是否同步执行命令
     },
     // electron：主进程服务
     // 说明：该配置的意思是，在根目录，执行 electron . --env=local
     electron: {
       directory: './',
       cmd: 'electron',
-      // --env: local|prod; '--color=always' 控制台颜色
-      args: ['.', '--env=local'],
-      // ee-bin@v1.4.0 如果前端启动时间过长，可先加载一个loading页
-      loadingPage: '/public/html/loading.html', 
+      args: ['.', '--env=local'], // --env: local|prod; '--color=always' 控制台颜色
+      loadingPage: '/public/html/loading.html', // ee-bin@v1.4.0 如果前端启动时间过长，可先加载一个loading页
+      sync: false,            // (非常住进程才能使用) 是否同步执行命令
     }
   },
 
@@ -201,6 +201,31 @@ module.exports = {
       // 注入死代码，注：影响性能
       deadCodeInjection: false,
     }
-  }
+  },
+
+  /**
+   * 执行自定义命令
+   * ee-bin exec
+   */
+  exec: {
+    node_v: {
+      directory: './',
+      cmd: 'node',
+      args: ['-v'],
+      sync: false,            // (非常住进程才能使用) 是否同步执行命令
+    },
+    npm_v: {
+      directory: './',
+      cmd: 'npm',
+      args: ['-v'],
+      sync: false,            // (非常住进程才能使用) 是否同步执行命令
+    },
+    python: {
+      directory: './python',
+      cmd: 'python',
+      args: ['./main.py', '--port=7074'],
+      stdio: "inherit", // ignore
+    },
+  },  
 };
 ```
