--- a/docs/01.v3/030.生成软件/030.图标修改.md
+++ b/docs/01.v3/030.生成软件/030.图标修改.md
@@ -20,7 +20,7 @@ article: false
 ./build/icons/icon.png 
 ```
 
-图片详情说明。macOS图（icon.icns）建议使用透明背景（512px），然后把415px尺寸的logo贴上去，生成新图。
+图片详情说明。macOS图（icon.icns）建议使用透明背景（512px），然后把logo贴上去,logo调整为415px，生成新图。
 ```bash
 # 文件路径
 electron-egg\build\icons
