--- a/docs/01.v3/045.跨语言支持/020.go/03.开发.md
+++ b/docs/01.v3/045.跨语言支持/020.go/03.开发.md
@@ -65,18 +65,25 @@ npm run dev-electron
 1. 编辑`./electron/config/bin.js`
 ```javascript
 // bin开发配置
-dev: {
+exec: {
+  // 单独调试，air 实现 go 热重载
   go: {
+    directory: './go',
+    cmd: 'air',
+    args: ['-c=config/.air.toml' ],
+  },
+  // 单独调试，以基础方式启动 go
+  go2: {
     directory: './go',
     cmd: 'go',
     args: ['run', './main.go', '--env=dev','--basedir=../', '--port=7073'],
-  },
+  }, 
 },
 ```
 2. 编辑`./package.json`
 ```javascript
   "scripts": {
-    "dev-go": "ee-bin dev --serve=go",
+    "dev-go": "ee-bin exec --cmds=go",
   }
 ```
 
