--- a/docs/01.v3/050.更新记录.md
+++ b/docs/01.v3/050.更新记录.md
@@ -7,6 +7,17 @@ article: false
 
 # 更新记录
 
+### 3.13.0 
+1. 【增加】ee-go eapp增加Register函数，增加 beforeClose 事件。
+2. 【增加】ee-go etask 增加任务队列。
+3. 【增加】ee-go ehttp 增加上下文参数Args、ArgJson函数。
+4. 【增加】ee-go eipc 增加 node.js与 go 通信桥。
+5. 【增加】ee-go ehelper 增加 IsDir、SlicesContains、Contains RemoveDuplicatedElem、RandomSleep方法。
+6. 【增加】ee-go eutil 增加Recover。
+7. 【增加】ee-demo 增加 go 热加载。
+8. 【增加】ee-demo 增加 go demo 示例,包括 基础入口、sqlite数据库、任务队列、注册函数等。
+9. 【升级】升级 ee-go v1.1.0。
+
 ### 3.12.0 
 1. 【优化】ee-core 优化 jsondb。
 2. 【优化】ee-core 优化 config。
