--- a/docs/03.api/004.ee-go/010.eapp.md
+++ b/docs/03.api/004.ee-go/010.eapp.md
@@ -19,11 +19,21 @@ import (
 ###  API列表
 仅做简单介绍。按照go标准，常量/函数/方法等详细信息，都在源码中。
 
-###  Run
+###  func Run() 
 运行程序。
 
-###  Close
+###  func Close()
 退出程序。
 
-###  ReadPackage
+###  func ReadPackage()
 读取 package.json 数据。
+
+### func Register()
+注册事件。目前只支持beforeClose事件。
+
+```
+eapp.Register("beforeClose", func() {
+	// 关闭数据库
+	sqlitelib.CloseDatabase()
+})
+```
