--- a/docs/03.api/004.ee-go/020.econfig.md
+++ b/docs/03.api/004.ee-go/020.econfig.md
@@ -20,23 +20,23 @@ import (
 ###  API列表
 仅做简单介绍。按照go标准，常量/函数/方法等说明信息，都在源码中。
 
-###  Init
+###  func Init()
 初始化配置，ee-go使用。
 
-###  Get
+###  func Get(key string) any
 获取某个属性的值。
 
-###  GetAll
+###  func GetAll() map[string]any
 获取全部属性的值。
 
-###  GetLogger
+###  func GetLogger() map[string]any
 获取日志属性的值。
 
-###  GetCoreLogger
+###  func GetCoreLogger() map[string]any
 获取日志core 属性的值。
 
-###  GetHttp
+###  func GetHttp() map[string]any
 获取http属性的值。
 
-###  GetStatic
+###  func GetStatic() map[string]any
 获取静态资源属性的值。
