--- a/docs/03.api/004.ee-go/025.eerror.md
+++ b/docs/03.api/004.ee-go/025.eerror.md
@@ -20,11 +20,11 @@ import (
 ###  API列表
 仅做简单介绍。按照go标准，常量/函数/方法等说明信息，都在源码中。
 
-###  Throw
+###  func Throw(msg string)
 抛出错误
 
-###  ThrowWrap
+###  func ThrowWrap(msg string, err error)
 抛出错误
 
-###  ThrowWithCode
+###  func ThrowWithCode(msg string, code int)
 抛出错误
