--- a/docs/08.插件/02.增量更新.md
+++ b/docs/08.插件/02.增量更新.md
@@ -11,6 +11,7 @@ permalink: /pages/7167a4/
 2. 如果上架其它平台应用商店 ，理论上也可以绕过官方的升级方式。
 3. 减小更新包大小，约4～10 倍，减少大量cdn资源费用。
 4. 用户重启即可完成更新，不需要走安装流程。
+5. 全量更新会删除本地数据，增量更新不会影响本地数据。
 
 ### 购买
 
