--- a/docs/08.插件/02.增量更新.md
+++ b/docs/08.插件/02.增量更新.md
@@ -12,6 +12,7 @@ permalink: /pages/7167a4/
 3. 减小更新包大小，约4～10 倍，减少大量cdn资源费用。
 4. 用户重启即可完成更新，不需要走安装流程。
 5. 全量更新会删除本地数据，增量更新不会影响本地数据。
+6. 支持 windows、macOS （部分linux发型版可能有权限问题，正在解决中）
 
 ### 购买
 
