--- a/docs/08.插件/02.增量更新.md
+++ b/docs/08.插件/02.增量更新.md
@@ -13,11 +13,18 @@ permalink: /pages/7167a4/
 4. 用户重启即可完成更新，不需要走安装流程。
 5. 全量更新会删除本地数据，增量更新不会影响本地数据。
 6. 支持 `windows`、`macOS-inter芯片`、`macOS苹果芯片` 平台。
+7. 插件提供了一些 api，可以让开发者自定义一些功能。
 
 ### demo
 插件文档中提供了完成的 demo，包括页面效果，易于使用。（购买后联系作者）
 
-### api
+### 购买
+
+添加微信
+
+<img style="zoom:20%;" src="https://img01.kaka996.com/ee/wx-2.jpg" >
+
+### API
 插件提供一些 api，可以让开发者自定义一些功能。
 
 #### setConfig()
@@ -50,8 +57,3 @@ permalink: /pages/7167a4/
 ### bytesChange()
 将字节数转换为可读的字符串
 
-### 购买
-
-添加微信
-
-<img style="zoom:20%;" src="https://img01.kaka996.com/ee/wx-2.jpg" >
