--- a/docs/08.插件/02.增量更新.md
+++ b/docs/08.插件/02.增量更新.md
@@ -18,6 +18,9 @@ permalink: /pages/7167a4/
 ### demo
 插件文档中提供了完成的 demo，包括页面效果，易于使用。（购买后联系作者）
 
+#### CDN
+[七牛云](https://s.qiniu.com/BbAjMv)每月10G`免费`流量，满足日常使用。
+
 ### 购买
 
 添加微信
