--- a/docs/01.v3/040.升级/020.软件全量更新.md
+++ b/docs/01.v3/040.升级/020.软件全量更新.md
@@ -85,6 +85,9 @@ http://kodo.qiniu.com/electron-egg/
 测试你的三个链接，能否下载（访问）。
 如果可以访问，触发升级功能时，会检测是否可以自动升级（可查看 [日志](/pages/0d08b1/) 是否有报错）
 
+#### CDN
+[七牛云](https://s.qiniu.com/BbAjMv)每月10G`免费`流量，满足日常使用。
+
 ###  注意事项
 
 - dev模式不支持更新
