--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -213,7 +213,7 @@ Error Cannot find module 'semver'
 包问题，都用npm安装，不要用cnpm、pnpm、yarn
 ```
 
-### 6：白屏、api 404、跨越问题
+### 6：白屏
 
 ```bash
 # dev模式白屏
@@ -226,13 +226,6 @@ Error Cannot find module 'semver'
 可能原因2：代码不生效
 如果执行过加密，则会生成加密代码：/public/electron ，框架优先读取它，源代码则不生效。
 如果发现编写的代码不生效，请记得删除加密代码文件。
-
-# 使用了代理
-问题2：代理导致api找不到
-解决方法：
-1：把代理模式，换成 环境变量模式，如：在.env（开发环境、生产环境）文件里定义多个url变量并赋值，代码中的url地址
-用环境变量代替。
-2：设置config.default.json中的windowsOption.webPreferences.webSecurity=true
 ```
 
 [知识点：为什么不能使用代理？](https://blog.csdn.net/qq_52126119/article/details/127895336)
@@ -567,3 +560,24 @@ const { logger } = require('ee-core/electron');
 const Log = require('ee-core/log');
 ```
 
+### 24：api 404、跨域问题
+
+原因：electron 为了安全，默认不允许跨域，即前端发送http请求访问其它服务的 api 时候，会报错。
+或者，提示 api 404 错误。
+
+解决方案：
+
+```javascript
+// 使用了代理proxy，导致api找不到
+
+解决方法：
+1：把代理模式，换成 环境变量模式，如：在.env（开发环境、生产环境）文件里定义多个url变量并赋值，代码中的url地址
+用环境变量代替。
+2：设置config.default.json中的windowsOption.webPreferences.webSecurity=false
+3：关闭同源策略
+./electron/index.js
+async ready () {
+  // const { app: electronApp } = require("electron");
+  electronApp.commandLine.appendSwitch("disable-web-security");
+}
+```
