--- a/docs/04.其它/020.案例精选01.md
+++ b/docs/04.其它/020.案例精选01.md
@@ -9,9 +9,8 @@ article: false
 
 桌面软件已进入 to B 时代，使用框架的大部分客户都是企业、政务内部使用，不方便提供图片展示；如果你想展示项目，请联系我（qq：530353222）
 
-### 低代码 - [官网](https://www.jnpfsoft.com/index.html?from=electron-egg)
+### 低代码 - 商业应用
 
-- [查看官网](https://www.jnpfsoft.com/index.html?from=electron-egg)
 ![](https://img01.kaka996.com/ee/images/ee-v3/yinmai/ym-p1.png)
 ![](https://img01.kaka996.com/ee/images/ee-v3/yinmai/ym-p4.png)
 
