--- a/docs/01.v3/020.基础功能/076.调试.md
+++ b/docs/01.v3/020.基础功能/076.调试.md
@@ -20,7 +20,10 @@ config.openAppMenu = true;
 
 在启动的应用程序界面，菜单中找到 view ->  toggle developer tool  ，点击打开：控制台工具。
 
-**如果软件运行异常，可以通过该方式检查是否有报错。**
+#### 其它排错方式
+
+- 命令行终端执行  xxx.exe (如果软件运行异常，可以通过该方式检查是否有报错)
+
 
 ### 主进程
 使用VSCode调试
