--- a/docs/01.v3/045.跨语言支持/020.go/03.开发.md
+++ b/docs/01.v3/045.跨语言支持/020.go/03.开发.md
@@ -72,6 +72,12 @@ exec: {
     cmd: 'air',
     args: ['-c=config/.air.toml' ],
   },
+  // windows 单独调试，air 实现 go 热重载 
+  go_w: {
+    directory: './go',
+    cmd: 'air',
+    args: ['-c=config/.air.windows.toml' ],
+  },  
   // 单独调试，以基础方式启动 go
   go2: {
     directory: './go',
@@ -84,10 +90,13 @@ exec: {
 ```javascript
   "scripts": {
     "dev-go": "ee-bin exec --cmds=go",
+    "dev-go-w": "ee-bin exec --cmds=go_w",
   }
 ```
 
 运行
 ```bash
 npm run dev-go
+or
+npm run dev-go-w
 ```
