--- a/docs/03.api/003.ee-core/061.jobs-childjob.md
+++ b/docs/03.api/003.ee-core/061.jobs-childjob.md
@@ -165,6 +165,16 @@ myProc.emitter.on(eventName, (data) => {
 
 分发任务
 
+#### myProc.callFunc(jobPath = '', funcName = '', ...params)
+> ee-core：v2.11.0
+
+调用job中模块的方法
+
+- 使用
+```javascript
+myProc.callFunc('./jobs/example/timer', 'pause', params1, params2);
+})
+
 #### myProc.kill()
 > ee-core：v2.1.0
 
