--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -581,3 +581,7 @@ async ready () {
   electronApp.commandLine.appendSwitch("disable-web-security");
 }
 ```
+
+### 25：arm64打包报错
+
+构建模块问题，请仔细阅读：[issue#I8H21P](https://gitee.com/dromara/electron-egg/issues/I8H21P)
