--- a/docs/01.v3/045.跨语言支持/040.python/01.开始.md
+++ b/docs/01.v3/045.跨语言支持/040.python/01.开始.md
@@ -28,7 +28,7 @@ git clone https://github.com/dromara/electron-egg.git
 2. 切换 `demo` 分支
 
 ```bash
-git checkout -b demo-java remotes/origin/demo
+git checkout -b demo-python remotes/origin/demo
 ```
 
 3. 安装 `前端`、`electron`、`python` 依赖
