--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -220,10 +220,13 @@ Error Cannot find module 'semver'
 问题1：先启动前端服务，再启动桌面服务，请查看文档中开发步骤
 
 # 打包后白屏
-可能原因1：前端路由
+可能原因1：前端base路径
+前端项目配置中，base路径改为相对路径 './'
+
+可能原因2：前端路由
 前端项目路由是history，改成 hash 。
 
-可能原因2：代码不生效
+可能原因3：代码不生效
 如果执行过加密，则会生成加密代码：/public/electron ，框架优先读取它，源代码则不生效。
 如果发现编写的代码不生效，请记得删除加密代码文件。
 ```
@@ -585,3 +588,8 @@ async ready () {
 ### 25：arm64打包报错
 
 构建模块问题，请仔细阅读：[issue#I8H21P](https://gitee.com/dromara/electron-egg/issues/I8H21P)
+
+### 26：程序偶尔打不开
+断电情况等，导致的程序 system.json 文件损坏，请升级 ee-core@2.12.0 以上版本。
+
+废弃了 system.json
