--- a/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
+++ b/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
@@ -83,7 +83,7 @@ npm run dev-electron
 ::: tip
 注1：如果启动的前端服务不是：http://localhost:8080/  请先配置：[config/bin.js](/pages/c492f8/) 文件中的 `frontend` 对象
 
-注2：如果打包后运行白屏，先检查资源是否移动，再检查路由是否为 hash 模式。
+注2：如果打包后运行白屏，检查基础路径，检查资源是否移动，检查路由是否为 hash 模式。
 :::
 
 #### 构建前端资源并移动
