--- a/docs/01.v3/045.跨语言支持/020.go/05.日志.md
+++ b/docs/01.v3/045.跨语言支持/020.go/05.日志.md
@@ -39,6 +39,20 @@ elog.Logger.Fatalf()
 ```
 ###  打包后：用户home目录
 注：与electron数据目录有所不同
+
+ee-go v1.3.0
+```bash
+# windows (例子)
+C:\Users\用户名\.软件名(如：.ee)\logs
+
+# macOS (例子)
+Users/用户名/.软件名(如：.ee)/logs
+
+# Linux (例子)
+$XDG_CONFIG_HOME or ~/.软件名(如：.ee)/logs
+```
+
+ee-go v1 ~ v1.2.1
 ```bash
 # windows (例子)
 C:\Users\用户名\Documents\软件名(如：ee)\logs
